# mesh-os

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  apply_migrations_4_5.sql  install.sh  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
mesh_os/cli/: main.py
mesh_os/core/: client.py
mesh_os/templates/hasura/metadata/: actions.yaml
mesh_os/templates/hasura/metadata/databases/: databases.yaml
mesh_os/templates/hasura/metadata/databases/default/functions/: functions.yaml
mesh_os/templates/hasura/migrations/default/0_cleanup/: down.sql  up.sql
mesh_os/templates/hasura/migrations/default/1_init/: down.sql  up.sql
mesh_os/templates/hasura/migrations/default/2_sample_data/: down.sql  up.sql
mesh_os/templates/hasura/migrations/default/3_agent_relations/: down.sql  up.sql
mesh_os/templates/hasura/migrations/default/4_remove_slug_validation/: down.sql  up.sql
mesh_os/templates/hasura/migrations/default/5_entities/: down.sql  up.sql
mesh_os/templates/hasura/migrations/default/6_workflows/: down.sql  up.sql
props_os/: .env.example  __init__.py
props_os/cli/: main.py
props_os/core/: __init__.py  client.py  taxonomy.py
props_os/migrations/: 000_init.sql
props_os/templates/: .env.example
props_os/templates/examples/: example.py
props_os/templates/hasura/: config.yaml
props_os/templates/hasura/migrations/default/1_init/: down.sql  up.sql
test-os/: docker-compose.yml
test-os/examples/: example.py
tests/: test_cli.py  test_client.py  test_sdk.py
(+2 files in other folders)
